--- a/template/bootstrap/css/bootstrap.css
+++ b/template/bootstrap/css/bootstrap.css
@@ -4530,15 +4530,15 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+  color: #fffffff2;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
+  color: #fffffff2;
 }
 
 .navbar-dark .navbar-nav .nav-link.disabled {
-  color: rgba(255, 255, 255, 0.25);
+  color: #fffffff2;
 }
 
 .navbar-dark .navbar-nav .show > .nav-link,
@@ -4549,7 +4549,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-toggler {
-  color: rgba(255, 255, 255, 0.5);
+  color: #fffffff2;
   border-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -4558,7 +4558,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.5);
+  color: #fffffff2;
 }
 
 .navbar-dark .navbar-text a {
