--- a/template/frontend/css/slide.css
+++ b/template/frontend/css/slide.css
@@ -6,11 +6,11 @@
 }
 .btn-orange {
     color: #fff;
-    background-color: #ff6c11;
+    background-color: #70b247;
 }
 .btn-orange:hover {
     color: #fff;
-    background-color: #ff6c11;
+    background-color: #70b247;
 }
 .menu-slide-detail {
     position: absolute;
