--- a/template/css/style.css
+++ b/template/css/style.css
@@ -15,7 +15,7 @@ body {
     font-size: 1em;
 }
 footer{
-    padding: 5% 15%;
+    padding: 5% /* 15% */;
 }
 
 .navbar-brand{
@@ -47,7 +47,7 @@ footer{
 }
 .text-header-medium{
     font-family: 'Kanit-Medium';
-    font-size: 2.5rem;
+    font-size: 1rem;
 }
 .text-header-regular{
     font-family: 'Kanit-Regular';
@@ -57,6 +57,6 @@ footer{
     font-family: 'Kanit-Regular';
 }
 .footer-panel{
-    border-left: solid 5px #878787;
+    /* border-left: solid 5px #878787; */
     padding-left: 18px;
 }
