--- a/template/frontend/css/slide.css
+++ b/template/frontend/css/slide.css
@@ -1,7 +1,7 @@
 .menu-slide-style{
     color: #ffffff;
     
-    background-image: url('../../../img_upload/product/28022019160456-architecture-1867187_1920.jpg');
+    background-image: url('../../../img_upload/home/1.jpg');
     
 }
 .menu-slide{
