--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -1,4 +1,22 @@
-
+.product-product-detail {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-family: 'K2D', sans-serif;
+    padding-left: 3vw;
+    padding-right: 3vw;
+}
+.product-product-name {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.text-header-medium{
+    color: #70b247;
+    font-size: 2vw;
+}
 .price-slide1{
     margin-top: 4vw;
     color: #fff;
