--- a/template/bootstrap/css/style.css
+++ b/template/bootstrap/css/style.css
@@ -21,7 +21,7 @@ textarea {
 h1 {
     font-size: 24px;
     font-weight: bold;
-    color: #f47322;
+    color: #32CD32;
 }
 
 h2 {
@@ -44,7 +44,7 @@ h2 {
 .list-header {
     width: 100%;
     height: 40px;
-    background-color: #f47322;
+    background-color: #32CD32;
     text-align: left;
     font-size: 12px;
     line-height: 14px;
@@ -77,7 +77,7 @@ h2 {
 .header {
     z-index: 99;
     height: 80px;
-    background-color: #f47322;
+    background-color: #32CD32;
     color: white;
     padding: 10px;
 }
@@ -120,7 +120,7 @@ h2 {
 }
 
 footer {
-    background-color: #f47322;
+    background-color: #32CD32;
     color: white;
     padding: 10px;
 }
@@ -193,20 +193,20 @@ footer {
 }
 
 #sidebar-wrapper {
-    background-color: #343434;
+    background-color: #fff;
 }
 
 .sidebar-nav li a {
-    color: #fff;
+    /* color: #fff; */
 }
 
 .sidebar-nav li a:hover {
     color: #000;
-    background: #f47322;
+    background: #32CD32;
 }
 
 .menu {
-    border-bottom: solid 1px #414040;
+    /* border-bottom: solid 1px #414040; */
 }
 
 .sidebar-nav .top {
@@ -214,15 +214,15 @@ footer {
 }
 
 .menu-active {
-    color: #f47322;
+    color: #32CD32;
     border-bottom: solid 1px #414040;
-    border-left: solid 8px #f47322;
+    border-left: solid 8px #32CD32;
 }
 
 .menu-active:hover {
     color: #000;
-    border-bottom: solid 1px #f47322;
-    border-left: solid 8px #f47322;
+    border-bottom: solid 1px #32CD32;
+    border-left: solid 8px #32CD32;
 }
 
 .menu-icon {
@@ -245,7 +245,7 @@ footer {
 .brand-line-one {
     font-size: 20px;
     font-weight: bold;
-    color: #f47322;
+    color: #32CD32;
     padding: 0px;
 }
 
@@ -312,7 +312,7 @@ table .order-table {
     color: #000;
     margin: 14px 0px;
     padding: 6px 36px;
-    background-color: #f47322;
+    background-color: #32CD32;
     display: inline-block;
     border: 1px solid transparent;
     cursor: pointer;
