--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -1,3 +1,10 @@
+.img-
+.text-product-home{
+    padding: 1.5% 6%;
+    font-weight: 600;
+    color: #959595;
+    margin-bottom: 2vw;
+}
 .main-div {
     position: relative;
     width: 200px;
@@ -46,7 +53,8 @@
     overflow: hidden;
 }
 .text-header-medium{
-    color: #0175A4;
+    color: #70b247;
+    font-size: 2.5vw;
 }
 .price-slide1{
     margin-top: 4vw;
