--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -1,4 +1,17 @@
-.img-
+.img-poppular-home2{
+    width: 99%;
+    margin: 5px;
+    height: 18vw;
+}
+.img-poppular-home1{
+    width: 35vw;
+    margin: 5px;
+}
+.img-poppular-home3{
+    width: 97%;
+    margin: 5px;
+    height: 18vw;
+}
 .text-product-home{
     padding: 1.5% 6%;
     font-weight: 600;
