--- a/template/css/style.css
+++ b/template/css/style.css
@@ -66,3 +66,9 @@ footer{
     /* border-left: solid 5px #878787; */
     padding-left: 18px;
 }
+.element.style {
+    background-color: rgba(0, 0, 0, 0.555);
+    width: 100%;
+    height: 57px;
+    padding: 3%;
+}
