--- a/template/frontend/css/contact.css
+++ b/template/frontend/css/contact.css
@@ -26,8 +26,20 @@
     color: #458020;
     font-size: 1.5rem;
 }
-.img-box-height{
-    height: 50%;
+.img-box-bg{
+    width: 100%;
+    height: 70%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: top;
+    background-position-x: center;
+    color: #ffffff;
+}
+.img-box-bg-cl{
+    background-color: #000000c7;
+    width: 100%;
+    height: 100%;
+    padding: 3%;
 }
 .overlay-contact{
     background: black;
