--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -67,8 +67,7 @@
     overflow: hidden;
 }
 .text-header-medium{
-    color: #70b247;
-    font-size: 2.5vw;
+    color: #0175A4;
 }
 .price-slide1{
     margin-top: 4vw;
