--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -1,3 +1,14 @@
+.btn-search{
+    color: #fff;
+    background-color: #70b247;
+    font-size: 1.25em;
+    margin-left: 1vw;
+    margin-top: 1vw;
+}
+.text-product-home-topic{
+    color: #70b247;
+    font-size: 2vw;
+}
 .img-poppular-home2{
     width: 99%;
     margin: 5px;
