--- a/template/frontend/css/footer.css
+++ b/template/frontend/css/footer.css
@@ -2,5 +2,12 @@
     width: 100%;
     z-index: -5;
     position: absolute;
+    bottom: 0%;
 
+}
+.con-footer{
+    padding-bottom: 15%;
+}
+footer{
+    position: relative;
 }
