--- a/template/frontend/css/news-style.css
+++ b/template/frontend/css/news-style.css
@@ -22,3 +22,11 @@
     font-size: 1.25em;
     margin-top: 1vw;
 }
+.topic-news{
+    font-size: 1.3vw;
+    font-weight: 600;
+    color: #70b247;
+}
+.date-news{
+    font-weight: 600;
+}
