--- a/template/frontend/css/news-style.css
+++ b/template/frontend/css/news-style.css
@@ -14,7 +14,7 @@
 }
 .img-news{
     width: 100%;
-    height: 50%;
+    height: 40%;
 }
 .btn-readmore{
     color: #fff;
@@ -38,4 +38,20 @@
 }
 .row-news2{
     padding-top: 2.5vw;
+}
+.box-search-news{
+    background: transparent;
+    border-color: #ececec;
+    margin-top: 10vw; 
+}
+.btn-search-news{
+    margin-top: 10vw;
+    color: #fff;
+    background-color: #70b247;
+    font-size: 1.25em;
+}
+.most-read{
+    padding-top: 1vw;
+    font-size: 1.5vw;
+    font-weight: 600;
 }
