--- a/template/frontend/css/property.css
+++ b/template/frontend/css/property.css
@@ -1,14 +1,25 @@
+.top{
+    padding: 0vw 20% 0% 20%;
+} 
+  .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 7vw 0vw 0vw 5%;
+  }
+
 .proerty-bg{
-    width: 20vw;
-    height: 20vw;
+    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: top;
     background-position-x: center;
     color: #ffffff;
 }
-.proerty-top{
-    padding-top: 6vw;
+.proerty-bg:after{
+    content: "";
+    display: block;
+    padding-bottom: 100%;
 }
 .proerty-content{
     background-color: rgba(0, 0, 0, 0.555);
@@ -21,79 +32,27 @@
     padding-top: 1vw;
     font-size: 3vw;
 }
-@media only screen and (max-width: 1100px) {
-    .proerty-bg{
-        width: 20vw;
-        height: 20vw;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position-y: top;
-        background-position-x: center;
-        color: #ffffff;
-    }
-    .proerty-top{
-        padding-top: 5vw;
-    }
-    .proerty-content{
-        background-color: rgba(0, 0, 0, 0.555);
-        width: 16vw;
-        height: 6vw;
-    }
-    .property-h3{
-        color: #ffffff;
-        text-align: center;
-        padding-top: 1vw;
-        font-size: 3vw;
-    }     
-}
 @media only screen and (max-width: 768px) {
-    .proerty-bg{
-        width: 31vw;
-        height: 31vw;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position-y: top;
-        background-position-x: center;
-        color: #ffffff;
-    }
-    .proerty-top{
-        padding-top: 9vw;
-    }
+    .content {
+        padding: 11vw 0vw 0vw 4%;
+      }
     .proerty-content{
-        background-color: rgba(0, 0, 0, 0.555);
-        width: 26vw;
+        width: 28vw;
         height: 8vw;
-    }
+    }        
     .property-h3{
-        color: #ffffff;
-        text-align: center;
-        padding-top: 1vw;
-        font-size: 5vw;
-    }     
+        font-size:  4vw;
+    }
 }
 @media only screen and (max-width: 576px) {
-    .proerty-bg{
-        width: 63vw;
-        height: 63vw;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position-y: top;
-        background-position-x: center;
-        color: #ffffff;
-    }
-    .proerty-top{
-        padding-top: 22vw;
-    }
+    .content {
+        padding: 24vw 0vw 0vw 3%;
+      }
     .proerty-content{
-        background-color: rgba(0, 0, 0, 0.555);
-        width: 58vw;
+        width: 60vw;
         height: 15vw;
-    }
+    }        
     .property-h3{
-        color: #ffffff;
-        text-align: center;
-        padding-top: 0vw;
-        font-size: 9vw;
-    }     
+        font-size: 8vw;
+    }
 }
-
