--- a/template/frontend/css/service.css
+++ b/template/frontend/css/service.css
@@ -5,11 +5,37 @@
     width: 100%
 }
 .text-sevice-detail1{
-    color: #70b247
+    color: #70b247;
+    font-size: 1.3vw;
 }
 .text-sevice-detail2{
     color: #3379a5;
 }
 .all-text-service-detail{
     padding-top: 3.5vw;
+}
+.img-service-detail{
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+}
+.servicedetail-box{
+    color: #0175A4;
+    font-size: 1.5rem;
+}
+.no-padding{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.btn-contact-servicedetail{
+    color: #fff;
+    background-color: #70b247;
+    font-size: 1vw;
+    margin-top: 4vw;
+}
+.text-service-detail{
+    font-size: 1vw;
+    padding-left: 3.5vw;
+    padding-right: 2.5vw;
+    color: #464646;
 }
