--- a/template/frontend/css/contact.css
+++ b/template/frontend/css/contact.css
@@ -71,3 +71,10 @@
         padding-top: 10%;
     }
 }
+@media (max-width: 321px) {
+    .text-address {
+        text-align: left;
+        margin-left: -40;
+        font-size: 0.7rem;
+    }
+}
