--- a/template/frontend/css/about.css
+++ b/template/frontend/css/about.css
@@ -22,3 +22,17 @@
     color: #458020;
     font-size: 1.5rem;
 }
+.img-slide-about{
+    position: relative;
+    height: 30vw;
+}
+.overlay-slide-about{
+    background: linear-gradient(blue, rgb(0, 255, 13));
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 30%;
+    opacity: .2;
+    z-index: 996;
+}
