--- a/template/frontend/css/contact.css
+++ b/template/frontend/css/contact.css
@@ -7,10 +7,19 @@
 .contact-box{
     width: 100%;
 }
-.size-img-contact{
+.img-slide-contact{
+    position: relative;
+    height: 30vw;
+}
+.overlay-slide-contact{
+    background: linear-gradient(blue, rgb(0, 255, 13));
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 30%;
+    opacity: .2;
+    z-index: 996;
 }
 .size-icon-contact{
     object-fit: cover;
