--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -234,15 +234,51 @@
     .menu{
         margin-left: 0vw;
     }
+    .slide-header-home{
+        color: #fff;
+        position: relative;
+        font-size: 1.6vw;
+        margin-left: 8vw;
+    }
+    .slide-text-detail{
+        padding-top: 1px;
+        color : #fff;
+        margin-left: 8vw;
+        font-size: 1vw;
+    }
+    .overlay-slide-service {
+        background: linear-gradient(blue, rgb(0, 255, 13));
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 30%;
+        opacity: .2;
+        z-index: 996;
+    }
+}
+@media only screen and (max-width: 1024px) {
+    .slide-header-home{
+        padding-bottom: 0px;
+    }
 }
 
 @media only screen and (max-width: 991px) {
     .size-img-slide{
-        min-height: 70vw;
+        min-height: 50vw;
     }
     .topic-popular-home{
         width: 35% !important ;
         font-size: 2vw;
+    }
+    .slide-detail-home{
+        margin-top: 10vw;
+    }
+    .box-search-home{
+        bottom: -80%;
+    }
+    .slide-text-detail{
+        font-size: 1.5vw;
     }
 }
 @media only screen and (max-width: 780px) {
