--- a/template/frontend/css/service.css
+++ b/template/frontend/css/service.css
@@ -49,32 +49,20 @@
     opacity: .2;
     z-index: 996;
 }
+.topic-service{
+    color: #5a5a5a;
+    font-weight: 600;
+}
 @media only screen and (max-width: 1100px) {
-    .slide-header-home{
-        color: #fff;
-        position: relative;
-        font-size: 1.6vw;
-        margin-left: 8vw;
-    }
-    .slide-text-detail{
-        padding-top: 1px;
-        color : #fff;
-        margin-left: 8vw;
-        font-size: 1vw;
-    }
-    .overlay-slide-service {
-        background: linear-gradient(blue, rgb(0, 255, 13));
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 30%;
-        opacity: .2;
-        z-index: 996;
-    }
+    
 }
 @media only screen and (max-width: 1024px) {
     .overlay-slide-service {
         height: 35%;
+    }
+}
+@media only screen and (max-width: 991px) {
+    .topic-service{
+        padding-top: 25vw;
     }
 }
