--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -292,7 +292,7 @@
 }
 @media only screen and (max-width: 500px) {
     .size-img-slide{
-        min-height: 80vw;
+        min-height: 100vw;
     }
     .topic-popular-home{
         width: 45% !important ;
@@ -300,6 +300,9 @@
     }
     .border-poplar-home{
         border: 4px solid #ececec;
+    }
+    .slide-detail-home{
+        margin-top: 40vw;
     }
 }
 @media only screen and (max-width: 400px) {
@@ -311,6 +314,9 @@
 @media only screen and (max-width: 380px) {
     .size-img-slide{
         min-height: 100vw;
+    }
+    .slide-detail-home{
+        margin-top: 40vw;
     }
 }
 @media only screen and (max-width: 320px) {
