--- a/template/frontend/css/contact.css
+++ b/template/frontend/css/contact.css
@@ -68,6 +68,21 @@
 }
 
 
+@media (max-width: 1025px){
+    .contact-box {
+        width: 100%;
+        height: 50%;
+    }
+    .img-box-bg {
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position-y: top;
+        background-position-x: center;
+        color: #ffffff;
+    }
+}
 @media (max-width: 992px) {
     .size-icon-contact{
         object-fit: cover;
@@ -85,5 +100,12 @@
         text-align: left;
         margin-left: -40;
         font-size: 0.7rem;
+    }
+}
+@media (max-width: 415px){
+.size-icon-contact {
+    object-fit: cover;
+    width: 100%;
+    padding-top: 0;
     }
 }
