--- a/template/frontend/css/service.css
+++ b/template/frontend/css/service.css
@@ -2,7 +2,8 @@
     font-size: 3.5vw;
 }
 .icon-service-detail{
-    width: 100%
+    width: 90%;
+    padding-left: 1vw;
 }
 .text-sevice-detail1{
     color: #70b247;
@@ -16,7 +17,6 @@
 }
 .img-service-detail{
     width: 100%;
-    height: 50%;
     object-fit: cover;
 }
 .servicedetail-box{
@@ -38,6 +38,7 @@
     padding-left: 3.5vw;
     padding-right: 2.5vw;
     color: #464646;
+    font-weight: 600;
 }
 .overlay-slide-service {
     background: linear-gradient(blue, rgb(0, 255, 13));
@@ -53,6 +54,18 @@
     color: #5a5a5a;
     font-weight: 600;
 }
+.service-detail{
+    padding-top: 7vw;
+}
+@media only screen and (max-width: 1496px) {
+    .icon-service-detail{
+        width: 80%;
+        padding-left: 1.3vw;
+    }
+    .text-sevice-detail1{
+        font-size: 1.3vw;
+    }
+}
 @media only screen and (max-width: 1100px) {
     
 }
@@ -60,10 +73,24 @@
     .overlay-slide-service {
         height: 35%;
     }
+    .text-sevice-detail1{
+        font-size: 1.8vw;
+    }
+    .btn-contact-servicedetail{
+        font-size: 1.5vw;
+        font-weight: 800;
+    }
 }
 @media only screen and (max-width: 991px) {
     .topic-service{
         padding-top: 25vw;
+    }
+    .text-sevice-detail1{
+        font-size: 1.3vw;
+        font-weight: 600;
+    }
+    .btn-contact-servicedetail{
+        font-size: 1.1vw;
     }
 }
 @media only screen and (max-width: 767px) {
@@ -74,6 +101,18 @@
 @media only screen and (max-width: 630px) {
     .topic-service{
         padding-top: 70vw;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .service-detail{
+        padding-top: 50vw;
+    }
+    .text-service-detail{
+        padding-left: 4.5vw;
+        padding-right: 3.5vw;
+    }
+    .btn-contact-servicedetail{
+        font-size: 0.4rem;
     }
 }
 @media only screen and (max-width: 415px) {
