--- a/template/frontend/css/contact.css
+++ b/template/frontend/css/contact.css
@@ -68,33 +68,33 @@
 }
 
 
-@media (max-width: 1025px){
-    .contact-box {
-        width: 100%;
-        height: 50%;
+@media (max-width: 991px) {
+    .contact-head {
+        padding-top: 40%;
     }
-    .img-box-bg {
-        width: 100%;
-        height: 100%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position-y: top;
-        background-position-x: center;
-        color: #ffffff;
+}
+@media (max-width: 768px) {
+    .contact-head {
+        padding-top: 100%;
     }
+    /* .size-icon-contact{
+        object-fit: cover;
+        width: 100%;
+    } */
 }
 @media (max-width: 992px) {
     .size-icon-contact{
         object-fit: cover;
         width: 100%;
-        padding-top: 20%;
+        
     }
 }
-@media (max-width: 768px) {
-    .text-contact{
-        padding-top: 10%;
+@media (max-width: 501px) {
+    .contact-head {
+        padding-top: 130%;
     }
 }
+
 @media (max-width: 321px) {
     .text-address {
         text-align: left;
@@ -106,6 +106,21 @@
 .size-icon-contact {
     object-fit: cover;
     width: 100%;
-    padding-top: 0;
+    padding-top: 30%;
+    }
+}
+@media (max-width: 433px) {
+    .contact-head {
+        padding-top: 150%;
+    }
+}
+@media (max-width: 376px) {
+    .contact-head {
+        padding-top: 150%;
+    }
+}
+@media (max-width: 321px) {
+    .contact-head {
+        padding-top: 180%;
     }
 }
