--- a/template/frontend/css/news-style.css
+++ b/template/frontend/css/news-style.css
@@ -21,6 +21,7 @@
     background-color: #70b247;
     font-size: 1.25em;
     margin-top: 1vw;
+    font-weight: 600;
 }
 .topic-news{
     font-size: 1.3vw;
@@ -43,6 +44,7 @@
     background: transparent;
     border-color: #ececec;
     margin-top: 10vw; 
+    width: 18vw;
 }
 .btn-search-news{
     margin-top: 10vw;
@@ -54,4 +56,70 @@
     padding-top: 1vw;
     font-size: 1.5vw;
     font-weight: 600;
+}
+.row-news{
+    margin-top: 0vw;
+}
+.most-read-news{
+    background-color: #f1f1f1;
+    margin-right: 2vw;
+}
+@media only screen and (max-width: 1200px) {
+    .btn-readmore{
+        font-size: 1.3vw;
+    }
+}
+@media only screen and (max-width: 992px) {
+    .topic-service{
+        margin-top: 25vw;
+    }
+    .btn-search-news{
+        margin-top: 10vw;
+        font-size: 0.40em;
+    }
+    .btn-readmore{
+        font-size: 1.1vw;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .topic-service{
+        margin-top: 60vw;
+    }
+    .box-search-news{
+        width: 18vw;
+    }
+    .btn-search-news{
+        margin-top: 1vw;
+    }
+    .btn-readmore{
+        font-size: 1.4vw;
+    }
+}
+@media only screen and (max-width: 698px) {
+    .box-search-news{
+        width: 30vw;
+    }
+}
+@media only screen and (max-width: 625px) {
+    .topic-service{
+        margin-top: 70vw;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .topic-service{
+        margin-top: 130vw;
+    }
+}
+@media only screen and (max-width: 415px) {
+    .btn-readmore {
+        font-size: 3.4vw;
+    }
+}
+@media only screen and (max-width: 320px) {
+    .topic-service{
+        margin-top: 170vw;
+    }
+    .btn-readmore {
+        font-size: 4.4vw;
+    }
 }
