--- a/template/frontend/css/about.css
+++ b/template/frontend/css/about.css
@@ -5,6 +5,10 @@
     padding-top: 10%;
     font-weight: 600;
 }
+.about-head-box{
+    padding-top: 10%;
+    font-weight: 600;
+}
 .about-box{
     width: 100%;
 }
