--- a/template/frontend/css/property-detail.css
+++ b/template/frontend/css/property-detail.css
@@ -3,9 +3,10 @@
     font-weight: 600;
     font-size: 3vw;
 }
-.property-de-font{
-
+.property-de-img {
+    width: 100%; height: auto; object-fit: cover;
 }
+
 @media only screen and (max-width: 769px) {
     .property-de-h1{
         font-size: 6vw;
