--- a/template/frontend/css/news-style.css
+++ b/template/frontend/css/news-style.css
@@ -1,3 +1,21 @@
+.news-topic{
+    font-size: 2vw;
+    padding-top: 2vw;
+    padding-bottom: 1vw;
+    padding-left: 1vw;
+}
+.img-newsdetail{
+    width: 100%;
+    height: 70%;
+    margin-top: 8vw;
+    object-fit: cover;
+}
+.news-detail{
+    padding-top: 10px; 
+}
+.news-detail1{
+    font-size: 1vw;
+}
 .font-news{
     color: #5a5a5a;
     font-weight: 600
