--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -147,6 +147,12 @@
     margin-left: 8vw;
     margin-top: 1vw;
 }
+.btn-slide2{
+    color: #fff;
+    font-size: 1.25em;
+    margin-left: 2vw;
+    margin-top: 1vw;
+}
 .slide-detail-home{
     /* position: absolute ;
     top: 20%;
@@ -172,7 +178,6 @@
 }
 .size-img-slide{
     width: 100%;
-    height: 100%;
     max-height: 43vw;
     z-index: 1;
     object-fit: cover;
