--- a/template/frontend/css/property-product.css
+++ b/template/frontend/css/property-product.css
@@ -13,20 +13,8 @@
     font-weight: 600;
     font-size: 3vw;
 }
-.property-pro-cut-h4{
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-}
-.property-pro-cut-text{
-    display: -webkit-box;
-    -webkit-line-clamp: 5;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-}
 @media only screen and (max-width: 1024px) {
-    .property-pro-cut-text {
+    .cut-text-multi {
         -webkit-line-clamp: 3;
     }    
 }
