--- a/template/frontend/css/service.css
+++ b/template/frontend/css/service.css
@@ -114,6 +114,9 @@
     .btn-contact-servicedetail{
         font-size: 0.4rem;
     }
+    .topic-service {
+        padding-top: 125vw;
+    }
 }
 @media only screen and (max-width: 415px) {
     .topic-service{
