--- a/template/frontend/css/service.css
+++ b/template/frontend/css/service.css
@@ -1,3 +1,7 @@
+.size-img-service{
+    width: 100%;
+    height: 20vw;
+}
 .text-header-service{
     font-size: 3.5vw;
 }
@@ -11,9 +15,11 @@
 }
 .text-sevice-detail2{
     color: #3379a5;
+    font-size: 1.3vw;
 }
 .all-text-service-detail{
-    padding-top: 3.5vw;
+    padding-top: 1vw;
+    padding-left: 1vw;
 }
 .img-service-detail{
     width: 100%;
@@ -59,7 +65,7 @@
 }
 @media only screen and (max-width: 1496px) {
     .icon-service-detail{
-        width: 80%;
+        width: 100%;
         padding-left: 1.3vw;
     }
     .text-sevice-detail1{
