--- a/template/frontend/css/service.css
+++ b/template/frontend/css/service.css
@@ -20,6 +20,7 @@
 .all-text-service-detail{
     padding-top: 1vw;
     padding-left: 1vw;
+    margin-bottom: 1vw;
 }
 .img-service-detail{
     width: 100%;
