--- a/template/frontend/css/property-detail.css
+++ b/template/frontend/css/property-detail.css
@@ -4,7 +4,9 @@
     font-size: 3vw;
 }
 .property-de-img {
-    width: 100%; height: auto; object-fit: cover;
+    width: 100%; 
+    height: auto; 
+    object-fit: cover;
 }
 .property-de-btn{
     color: #fff;
@@ -14,7 +16,11 @@
     width: 100%;  
     height: 25%;
 }
-@media only screen and (max-width: 769px) {
+.property-de-font-weight{
+    font-weight: 800;
+}
+
+@media only screen and (max-width: 767.5px) {
     .property-de-h1{
         font-size: 6vw;
     }
