--- a/template/frontend/css/service.css
+++ b/template/frontend/css/service.css
@@ -1,3 +1,7 @@
+.detail-service{
+    margin-right: 1vw;
+    margin-left: 1vw;
+}
 .size-img-service{
     width: 100%;
     height: 20vw;
@@ -6,12 +10,14 @@
     font-size: 3.5vw;
 }
 .icon-service-detail{
-    width: 90%;
-    padding-left: 1vw;
+    width: 12vw;
+    height: 10vw;
 }
 .text-sevice-detail1{
     color: #70b247;
     font-size: 1.3vw;
+    font-weight: 600;
+    margin-top: 2vw;
 }
 .text-sevice-detail2{
     color: #3379a5;
@@ -24,6 +30,7 @@
 }
 .img-service-detail{
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 .servicedetail-box{
@@ -66,11 +73,12 @@
 }
 @media only screen and (max-width: 1496px) {
     .icon-service-detail{
-        width: 100%;
-        padding-left: 1.3vw;
+        width: 12vw;
+        height: 10vw;
     }
     .text-sevice-detail1{
         font-size: 1.3vw;
+        font-weight: 600;
     }
 }
 @media only screen and (max-width: 1100px) {
@@ -93,7 +101,7 @@
         padding-top: 25vw;
     }
     .text-sevice-detail1{
-        font-size: 1.3vw;
+        font-size: 2.3vw;
         font-weight: 600;
     }
     .btn-contact-servicedetail{
