--- a/template/frontend/css/service.css
+++ b/template/frontend/css/service.css
@@ -94,12 +94,15 @@
     .overlay-slide-service {
         height: 35%;
     }
-    .text-sevice-detail1{
-        font-size: 1.8vw;
-    }
     .btn-contact-servicedetail{
         font-size: 1.5vw;
         font-weight: 800;
+    }
+    .text-sevice-detail1 {
+        font-size: 2.3vw;
+    }
+    .text-sevice-detail2 {
+        font-size: 2vw;
     }
 }
 @media only screen and (max-width: 991px) {
@@ -109,7 +112,7 @@
     .text-sevice-detail1{
         font-size: 2.3vw;
         font-weight: 600;
-        margin-left: 6vw;
+        margin-left: 0vw;
         margin-top: 1vw;
     }
     .btn-contact-servicedetail{
@@ -124,6 +127,9 @@
         width: 20vw;
         height: 14vw;
         margin-left: 2vw;
+    }
+    .size-img-service {
+        height: 30vw;
     }
 }
 @media only screen and (max-width: 767px) {
@@ -145,11 +151,51 @@
         height: 18vw;
     }
     .text-sevice-detail1 {
-        font-size: 3.3vw;
-        margin-top: 3vw;
+        font-size: 3.2vw;
+        margin-top: 1vw;
+    }
+    .text-sevice-detail2 {
+        font-size: 3vw;
     }
     .btn-contact-servicedetail {
         margin-top: 6vw;
+    }
+    .icon-service {
+        width: 15vw;
+        height: 13vw;
+        margin-left: -1vw;
+    }
+}
+@media only screen and (max-width: 575.5px) {
+    .size-img-service{
+        height: 60vw;
+    }
+    .icon-service {
+        width: 20vw;
+        height: 14vw;
+        margin-left: 5vw;
+    }
+    .text-sevice-detail1 {
+        font-size: 4.3vw;
+        margin-top: 0vw;
+    }
+    .text-sevice-detail2 {
+        font-size: 3.3vw;
+        margin-left: 6vw;
+    }
+}
+@media only screen and (max-width: 550.5px) {
+    .icon-service {
+        width: 22vw;
+        height: 22vw;
+    }
+    .text-sevice-detail1 {
+        font-size: 5.3vw;
+        margin-top: 3vw;
+    }
+    .text-sevice-detail2 {
+        font-size: 5.3vw;
+        margin-left: 0vw;
     }
 }
 @media only screen and (max-width: 500px) {
@@ -184,11 +230,21 @@
         height: 20vw;
     }
     .topic-service {
-        padding-top: 90vw !important;
+        padding-top: 130vw !important;
     }
 }
 @media only screen and (max-width: 320px) {
     .topic-service {
-        padding-top: 120vw;
+        padding-top: 160vw !important;
+    }
+    .icon-service {
+        width: 24vw;
+        height: 22vw;
+    }
+    .text-sevice-detail1 {
+        font-size: 5.5vw;
+    }
+    .text-sevice-detail2 {
+        font-size: 5.3vw;
     }
 }
