--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -1,3 +1,6 @@
+.margin-all-slide{
+    margin-top: 4vw;
+}
 .size-img-product-home{
     width: 100%;
     height: 20vw;
@@ -513,6 +516,11 @@
         margin-top: 8vw;
     }
 }
+@media only screen and (max-width: 642px) {
+    .margin-all-slide {
+        margin-top: 10vw;
+    }
+}
 @media only screen and (max-width: 600px) {
     .size-img-slide-home{
         min-height: 75vw;
@@ -524,6 +532,7 @@
         bottom: -40%;
     }
 }
+
 
 @media only screen and (max-width: 500px) {
     .size-img-slide{
