--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -1,3 +1,6 @@
+.margin-product-home{
+    padding-top: 7vw;
+}
 .margin-all-slide{
     margin-top: 4vw;
 }
@@ -110,8 +113,7 @@
     width: 100%;
     height: 18vw;
 }
-.text-product-home{
-    padding: 1.5% 6%;
+.text-product-home{;
     font-weight: 600;
     color: #959595;
     margin-bottom: 2vw;
@@ -156,12 +158,15 @@
     font-family: 'K2D', sans-serif;
     padding-left: 3vw;
     padding-right: 3vw;
+    color: #959595;
 }
 .product-product-name {
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    font-size: 1.7vw;
+    color: #959595;
 }
 .text-header-medium{
     color: #0175A4;
@@ -405,7 +410,13 @@
     .img-slide-home{
         margin-top: 2vw;
     }
-    
+    .size-img-product-home{
+        width: 100%;
+        height: 23vw;
+    }
+    .product-product-name {
+        font-size: 1.7vw;
+    }
 }
 
 
@@ -459,6 +470,13 @@
     .box-search-home-index {
         bottom: -19%;
     }
+    .size-img-product-home {
+        width: 100%;
+        height: 25vw;
+    }
+    .product-product-name {
+        font-size: 2.5vw;
+    }
 }
 @media only screen and (max-width: 780px) {
     .img-poppular-home-padding{
@@ -510,16 +528,32 @@
     .price-slide1 {
         font-size: 2vw;
     }
+    .margin-product-home {
+        padding-top: 15vw;
+    }
+    .product-product-name {
+        font-size: 3.5vw;
+    }
+    .size-img-product-home {
+        height: 30vw;
+    }
 }
 @media only screen and (max-width: 767.5px) {
     .box-search-home-index {
         bottom: -60%;
     }
     .text-product-home-topic{
-        margin-top: 40vw;
+        margin-top: 30vw;
     }
     .img-slide-home {
         margin-top: 8vw;
+    }
+    .text-product-home-topic {
+        font-size: 5vw;
+    }
+    .topic-popular-home {
+        width: 55% !important;
+        font-size: 3vw;
     }
 }
 @media only screen and (max-width: 642px) {
@@ -536,6 +570,9 @@
     }
     .box-search-home-index {
         bottom: -40%;
+    }
+    .size-img-product-home {
+        height: 45vw;
     }
 }
 
@@ -585,14 +622,32 @@
     }
 }
 @media only screen and (max-width: 416px) {
-    .box-search-home-index {
-        bottom: -63%;
-    }
     .img-slide-home {
-        margin-top: 16vw;
+        margin-top: 12vw;
     }
     .box-search-home-index {
         bottom: -62%;
+    }
+    .size-img-product-home {
+        height: 45vw;
+    }
+    .text-product-home-topic {
+        font-size: 6vw;
+    }
+    .size-img-product-home {
+        height: 55vw;
+    }
+    .product-product-name {
+        font-size: 5.5vw;
+    }
+    .margin-product-home {
+        padding-top: 30vw;
+    }
+    .slide-detail-home {
+        margin-top: 35vw;
+    }
+    .btn-slide2 {
+        margin-left: 0vw;
     }
 }
 @media only screen and (max-width: 400px) {
@@ -662,6 +717,10 @@
     }
     .box-search-home-index {
         bottom: -50%;
+    }
+    .text-product-home-topic {
+        margin-top: 45vw;
+        font-size: 7vw;
     }
 
 }
