--- a/template/frontend/css/menu.css
+++ b/template/frontend/css/menu.css
@@ -4,6 +4,9 @@
     position: relative;
     padding: 0 5%;
     color: #ffffff; 
+    position: absolute;
+    width: 100%;
+    margin-left: -6vw;
 }
 .nav-link-color {
     color: #70b247;
@@ -112,8 +115,27 @@ img::-moz-selection {
         padding: 12px 0;
     }
 }
+@media (max-width: 1326.5px) {
+    .header-menu {
+        margin-left: -10vw;
+    }
+}
+@media (max-width: 1200.5px) {
+    .header-menu {
+        margin-left: -7vw;
+    }
+}
+@media (max-width: 1100px) {
+    .header-menu {
+        margin-left: 7vw;
+    }
+}
 
-
+@media (max-width: 1024px) {
+    .header-menu {
+        margin-left: 0vw;
+    }
+}
 
 @media (max-width: 991px) {
     .contact_list {
@@ -157,6 +179,7 @@ img::-moz-selection {
         padding-left: 75vw;
     }
 }
+
 @media (max-width: 613px) {
     .contact_list {
         padding-left: 70vw;
