--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -7,6 +7,7 @@
 .size-img-product-home{
     width: 100%;
     height: 20vw;
+    object-fit: cover
 }
 .footer-button{
     background-color: #fff;
