--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -160,6 +160,7 @@
     padding-left: 3vw;
     padding-right: 3vw;
     color: #959595;
+    height: 5vw;
 }
 .product-product-name {
     display: -webkit-box;
