--- a/template/frontend/css/footer.css
+++ b/template/frontend/css/footer.css
@@ -15,3 +15,27 @@ button:hover{
     color: #70b247;
     text-decoration: underline;
 }
+.cut-text-multi-footer-FROMTHEBLOG {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.cut-footer-topic {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.cut-text-multi-footer-about1 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.cut-text-multi-footer-about2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
