--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -113,8 +113,9 @@
 .img-poppular-home3{
     width: 100%;
     height: 18vw;
+    object-fit: cover;
 }
-.text-product-home{;
+.text-product-home{
     font-weight: 600;
     color: #959595;
     margin-bottom: 2vw;
